--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "io_tools"]
 	path = io_tools
 	url = https://github.com/mrknorman/io_tools
+[submodule "cuda_tools"]
+	path = cuda_tools
+	url = https://github.com/mrknorman/cuda_tools.git
